spacing issue with content header

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -142,7 +142,7 @@
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
-    min-width: 296px;
+    min-width: 279px;
     max-width: 408px;
     border: 1px solid color-mix(in oklch, var(--background) 50%, transparent);
     border-radius: 1rem;
